[tool.poetry]
name = "procgen_adventure"
version = "0.1.0"
description = ""
authors = ["Anaelle Laurans <16943368+Laurans@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.3.1"
tensorboard = "^2.1.0"
wandb = "^0.8.19"
loguru = "^0.4.0"
procgen = "^0.9.2"
ray = {extras = ["rllib"], version = "^0.8.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
flake8 = "^3.7.9"
pdbpp = "^0.10.2"
mypy = "^0.761"
black = "^19.10b0"
pytest-cov = "^2.8.1"
pre-commit = "^1.20.0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
