[tool.poetry]
name = "procgen_adventure"
version = "0.1.0"
description = ""
authors = ["Anaelle Laurans <16943368+Laurans@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
procgen = "0.9.2"
torch = "^1.4.0"
pandas = "^1.0.0"
requests = "^2.22.0"
ray = {extras = ["debug", "rllib"], version = "^0.8.1"}
aiohttp = "^3.6.2"
psutil = "^5.6.7"
setproctitle = "^1.1.10"
grpcio = "^1.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
flake8 = "^3.7.9"
pdbpp = "^0.10.2"
mypy = "^0.761"
black = "^19.10b0"
pytest-cov = "^2.8.1"
pre-commit = "^2.0.1"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
